tests/ui/issues/issue-16966.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-16966.rs:2:12
   |
LL |     panic!(std::default::Default::default());
   |     -------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |     |      |
   |     |      cannot infer type
   |     required by a bound introduced by this call
   |
   = note: cannot satisfy `_: Any`
note: required by a bound in `begin_panic`
  --> $SRC_DIR/std/src/panicking.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
