tests/ui/issues/issue-16966.rs
fn main() {
    panic!(std::default::Default::default());
    //~^ ERROR type annotations needed
}
